# WWE

./: .gitignore  LICENSE  README.md
.claude/: settings.json
backend/: .dockerignore  .env.example  Dockerfile  compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_add_invite_code.py
backend/app/: api.py  config.py  db.py  main.py  models.py  schemas.py
frontend/: package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  constants.ts  index.css  store.ts
frontend/src/components/: Avatar.tsx  Button.tsx  Calendar.tsx  Card.tsx  Input.tsx  ProfileBtn.tsx  Screen.tsx
frontend/src/screens/: Edit.tsx  EditA.tsx  Intro.tsx  Landing.tsx  LandingC.tsx  Onboard.tsx  OnboardA.tsx  Profile.tsx  ProfileB.tsx  ProfileDetail.tsx  Room.tsx  RoomAvailability.tsx  RoomB.tsx  RoomEmpty.tsx  Setup.tsx  SetupA.tsx
